This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

26-Jan-2002 (Lars Duening)  (3.3.376)
  - (configure) The check for pthread_atfork() never succeeded (reported by
       Nostradamus).
  - (object.c) Removed a compiler warning (reported by Nostradamus).
  - (prolang.y) Removed a compilation problem.

25-Jan-2002 (Lars Duening)  (3.3.374+.375)
  - (prolang.y, interpret.c, func_spec) Implemented short-circuit evaluation
       for the operators '&&=' and '||='.

25-Jan-2002 (Lars Duening)  (3.3.373)
  - (bitstrings.c, mstrings, efuns.c, interpret.c, lex.c) Corrected a string
       refcount error in and/or/xor_bits() (reported by Markus).

24-Jan-2002 (Lars Duening)  (3.3.372)
  - (lex.c) Included #pragma xxx_types settings are no longer restricted
       to the include file's scope (reported by Gnomi).

24-Jan-2002 (Lars Duening)  (3.3.371)
  - (object.c) save/restore didn't look out for shared closures, which
       could lead to endless recursions.
  - (prolang.y) When compiling the context for inline closures, references
       to local variables (for initialisation) were already redirected
       into the closure.

23-Jan-2002 (Lars Duening)  (3.3.370)
  - (configure, ptmalloc.c) Not all systems provide pthread_atfork(),
       so configure now checks for it and activates a dummy if
       necessary.

23-Jan-2002 (Lars Duening)  (3.3.369)
  - (structs) Swapping structs during a GC triggered a sanity check
       in error (reported by Bardioc).

23-Jan-2002 (Lars Duening)  (3.3.368)
  - (xalloc.c) I confused two function arguments in the implementation
       of rexalloc() *blush*.

22-Jan-2002 (Lars Duening)  (3.3.367)
  - (prolang.y) The typetracking for assignments to a struct member
       was faulty (reported by Markus).

22-Jan-2002 (Lars Duening)  (3.3.366)
  - (xalloc.c) rexalloc() and malloc_increment_size() didn't update the